--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,9 @@ h1 {
   text-align: center;
   font-family: 'Londrina Outline', cursive;
 }
-
+h2 {
+  text-align: center;
+}
 h3{
   text-align: center;
   
